[package]
name = "rust_experimental"
version = "0.1.1"
edition = "2021"

[dependencies]
# Tries to order dependencies from most to least used
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "stream", "rustls-tls-webpki-roots-no-provider"] }
actix-web = { version = "4.9.0", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "http2", "unicode", "compat", "secure-cookies"] }
actix-cors = "0.7.0"
serde_json = "1.0.135"
dotenvy = "0.15.7"
anyhow = "1.0.95"
# Below are niche dependencies, remove if not needed
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = { version = "2.6.0" }
umya-spreadsheet = "2.3.3"
russh = "0.49.2"
utoipa = {version = "5.4.0", features = ["actix_extras"]}
utoipa-actix-web = "0.1.2"
rustls = {version = "0.23.21", default-features = false, features = ["tls12"], default_features = false}
#utoipa-swagger-ui = { version = "8.1.1", features = ["actix-web"] }
webpki-roots = "1.0.3"
chacha20poly1305 = "0.10.1"
der = "0.7.9"
ecdsa = "0.16.9"
hmac = "0.12.1"
hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"
p256 = "0.13.2"
pkcs8 = "0.10.2"
rand_core = "0.6.4"
rsa = "0.9.8"
sha2 = "0.10.9"
signature = "2.2.0"
x25519-dalek = "2.0.1"
webpki = { package = "rustls-webpki", version = "0.102.8", default-features = false, features = ["alloc"] }
rustls-platform-verifier = "0.5.3"
async-trait = "0.1.89"
suppaftp = { version = "7.0.6", default-features = false, features = []}
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "postgres", "mysql" ] }
tiberius = { version = "0.12.3", default-features = false, features = ["rustls-pemfile", "rustls-native-certs", "tokio-util", "winauth", "tds73"] }
rusqlite = "0.31.0"
# hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "logging", "native-tokio", "tls12", "webpki-roots"] }
